--- a/templates/client/client_view/index.html
+++ b/templates/client/client_view/index.html
@@ -1,30 +1,12 @@
-{% extends 'homepage/base.html' %}
+{% extends 'client/client_view/base.html' %}
 {% load static %}
-{% block title %}CRUELTOUCH | Client{% endblock %}
-{% block login %}
-    <li>
-    <a href="" style="color:green">Hello, {{ user.first_name }}</a>
-    <ul class="sub-menu">
-        <li><a href="{% url 'client:logout' %}" style="color:darkred">LOGOUT</a></li>
-    </ul>
-    </li>
-{% endblock %}
-<head>
-    {% block customCSS %}
-        <link rel="stylesheet" type="text/css" href="{% static 'client/index.css' %}"/>
-        <link rel="stylesheet" type="text/css" href="{% static 'client/likes.css' %}"/>
-    {% endblock %}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-          integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
-</head>
+{% block title %}CRUELTOUCH | Dashboard{% endblock %}
 
 {% block body %}
     {% if album %}
         {% for alb in album %}
         <h2 class="alert-info" id="info" style="text-align: center; margin-top: auto">
-            Hi, {{ user.first_name }}. You have some photos to choose from.</h2>
+            Hi, {{ user.first_name }}. You have some new photos.</h2>
         <div class="alert-warning" style="text-align: center; font-size: medium">
             Click  <a href="{% url 'client:album_details' alb.id %}">here</a> </div>
         {% endfor %}
