More information for booking session & update price fixed

--- a/templates/administration/email_template/late_reply_session_request_received.html
+++ b/templates/administration/email_template/late_reply_session_request_received.html
@@ -151,6 +151,9 @@
                                         We are sorry for any inconvenience you may have experienced on our website. We
                                         are working hard to fix the issue.
                                     </p>
+                                    <p style="font-size: 16px; font-weight: 700; line-height: 24px; color: #777777;">
+                                        NB: A $100 deposit is required to book the date. No deposit, no obligation.
+                                    </p>
                                 </td>
                             </tr>
                             <tr>
