--- a/templates/administration/email_template/notify_admin_session_request_received.html
+++ b/templates/administration/email_template/notify_admin_session_request_received.html
@@ -219,6 +219,36 @@
                                                 {{ status.title }}
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <td width="75%" align="left"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
+                                                Phone number
+                                            </td>
+                                            <td width="25%" align="left"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
+                                                {{ phone }}
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td width="75%" align="left"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
+                                                Desired date
+                                            </td>
+                                            <td width="25%" align="left"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
+                                                {{ desired_date }}
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td width="75%" align="left"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
+                                                Client address
+                                            </td>
+                                            <td width="25%" align="left"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
+                                                {{ address }}
+                                            </td>
+                                        </tr>
                                     </table>
                                 </td>
                             </tr>
