--- a/templates/administration/view/index.html
+++ b/templates/administration/view/index.html
@@ -177,9 +177,12 @@
                                 <table id="example2" class="table table-bordered table-striped">
                                     <thead>
                                     <tr>
-                                        <th>{% translate "Date" %}</th>
+                                        <th>{% translate "Date taken" %}</th>
+                                        <th>{% translate "Desired date" %}</th>
                                         <th>{% translate "Name" %}</th>
                                         <th>{% translate "Email" %}</th>
+                                        <th>{% translate "Phone" %}</th>
+                                        <th>{% translate "Address" %}</th>
                                         <th>{% translate "Status" %}</th>
                                         <th>{% translate "Email sent" %}</th>
                                         <th>{% translate "Actions" %}</th>
@@ -192,12 +195,27 @@
                                                 {{ rs.time_book_taken }}
                                             </td>
                                             <td>
-                                                &nbsp;&nbsp;&nbsp;{{ rs.full_name }}
+                                                {{ rs.get_desired_date }}
+                                            </td>
+                                            <td>
+                                                {{ rs.full_name }}
                                             </td>
                                             <td>
                                                 <a href="mailto:{{ rs.email }}">
-                                                    &nbsp;&nbsp;&nbsp;{{ rs.email }}
+                                                    {{ rs.email }}
                                                 </a>
+                                            </td>
+                                            <td>
+                                                {% if rs.is_phone %}
+                                                    <a href="tel:{{ rs.get_phone_number }}">
+                                                        {{ rs.get_phone_number }}
+                                                    </a>
+                                                {% else %}
+                                                    {{ rs.get_phone_number }}
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {{ rs.get_address }}
                                             </td>
                                             <td>
                                                 <span>{{ rs.status.title }}</span>
@@ -230,9 +248,12 @@
                                     </tbody>
                                     <tfoot>
                                     <tr>
-                                        <th>{% translate "Date" %}</th>
+                                        <th>{% translate "Date taken" %}</th>
+                                        <th>{% translate "Desired date" %}</th>
                                         <th>{% translate "Name" %}</th>
                                         <th>{% translate "Email" %}</th>
+                                        <th>{% translate "Phone" %}</th>
+                                        <th>{% translate "Address" %}</th>
                                         <th>{% translate "Status" %}</th>
                                         <th>{% translate "Email sent" %}</th>
                                         <th>{% translate "Actions" %}</th>
