--- a/templates/administration/email_template/session_request_received.html
+++ b/templates/administration/email_template/session_request_received.html
@@ -147,6 +147,9 @@
                                         reservation has been successfully submitted. We will do our best to process it.
                                         You will receive an email shortly with the next steps.
                                     </p>
+                                    <p style="font-size: 16px; font-weight: 700; line-height: 24px; color: #777777;">
+                                        NB: A $100 deposit is required to book the date. No deposit, no obligation.
+                                    </p>
                                 </td>
                             </tr>
                             <tr>
