--- a/templates/client/booking_and_promotions/bookme.html
+++ b/templates/client/booking_and_promotions/bookme.html
@@ -1,5 +1,13 @@
 {% extends 'homepage/base.html' %}
+{% load static %}
 {% block title %}Book me{% endblock %}
+{% block customCSS %}
+    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css"
+          integrity="sha512-rxThY3LYIfYsVCWPCW9dB0k+e3RZB39f23ylUYTEuZMDrN/vRqLdaCBo/FbvVT6uC2r0ObfPzotsfKF9Qc5W5g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+{% endblock %}
 {% block body %}
     <div class="clearfix"></div>
     <!-- Header section end  -->
@@ -118,7 +126,10 @@
                         </ul>
                         <p class="small">
                             In order to have a better user experience,
-                            if you hadn't register, it is advised to do it.
+                            we recommend you to register first.
+                        </p>
+                        <p class="important" style="font-size: 16px; font-weight: 700; line-height: 24px; color: #777777;">
+                            NB: A $100 deposit is required to book the date. No deposit, no obligation.
                         </p>
 
                     </div>
@@ -133,6 +144,18 @@
                         <div>
                             <label for="email">Email address * : </label>
                             {{ form.email }}
+                        </div>
+                        <div>
+                            <label for="email">Phone number * : </label>
+                            {{ form.phone_number }}
+                        </div>
+                        <div class="bootstrap-iso form">
+                            <label for="email">Desired date * : </label>
+                            {{ form.desired_date }}
+                        </div>
+                        <div>
+                            <label for="email">Your address * : </label>
+                            {{ form.address }}
                         </div>
                         <div>
                             <div onchange="display();">
@@ -166,96 +189,21 @@
             </div>
             <div class="container" style="margin-top: 20px;">
                 {% if messages %}
-                {% for message in messages %}
-                    <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %}"
-                         role="alert">{{ message }}</div>
-                {% endfor %}
-            {% endif %}
+                    {% for message in messages %}
+                        <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %}"
+                             role="alert">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
     </section>
     <!-- Book me section end  -->
 
+{% endblock %}
 
-    <script>
-        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field
-*/
-
-        //Query All input fields
-        var form_fields = document.getElementsByTagName('input')
-        form_fields[1].placeholder = 'Full name...';
-        form_fields[2].placeholder = 'A valid email address, please...';
-        form_fields[3].placeholder = 'Subject...';
-        form_fields[4].placeholder = 'Message...';
-
-
-        for (var field in form_fields) {
-            form_fields[field].className += ' form-control'
-        }
-
-        function display() {
-            var session = document.getElementById("id_session_type").value;
-            var place = document.getElementById("id_place").value;
-            var packages = document.getElementById("id_package").value;
-
-            if (session === 'portrait' & place === 'outdoor' & packages == 7) {
-                document.getElementById('totalPrice').innerHTML = "Total: 200$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'portrait' & place === 'outdoor' & packages == 15) {
-                document.getElementById('totalPrice').innerHTML = "Total: 300$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'portrait' & place === 'outdoor' & packages == 35) {
-                document.getElementById('totalPrice').innerHTML = "Total: 500$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'portrait' & place === 'outdoor' & packages == 60) {
-                document.getElementById('totalPrice').innerHTML = "Total: 550$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'birthday' & place === 'outdoor' & packages == 7) {
-                document.getElementById('totalPrice').innerHTML = "Total: 200$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'birthday' & place === 'outdoor' & packages == 15) {
-                document.getElementById('totalPrice').innerHTML = "Total: 300$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'birthday' & place === 'outdoor' & packages == 35) {
-                document.getElementById('totalPrice').innerHTML = "Total: 500$";
-                document.getElementById('note').innerHTML = "";
-            } else if (session === 'birthday' & place === 'outdoor' & packages == 60) {
-                document.getElementById('totalPrice').innerHTML = "Total: 550$";
-                document.getElementById('note').innerHTML = "";
-
-            } else if (session === 'portrait' & place === 'studio' & packages == 7) {
-                document.getElementById('totalPrice').innerHTML = "Total: 245$";
-                document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
-            } else if (session === 'portrait' & place === 'studio' & packages == 15) {
-                document.getElementById('totalPrice').innerHTML = "Total: 345$";
-                document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
-            } else if (session === 'portrait' & place === 'studio' & packages == 35) {
-                document.getElementById('totalPrice').innerHTML = "Total: 545$";
-                document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
-            } else if (session === 'portrait' & place === 'studio' & packages == 60) {
-                document.getElementById('totalPrice').innerHTML = "Total: 550$";
-            } else if (session === 'birthday' & place === 'studio' & packages == 7) {
-                document.getElementById('totalPrice').innerHTML = "Total: 245$";
-                document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
-            } else if (session === 'birthday' & place === 'studio' & packages == 15) {
-                document.getElementById('totalPrice').innerHTML = "Total: 345$";
-                document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
-            } else if (session === 'birthday' & place === 'studio' & packages == 35) {
-                document.getElementById('totalPrice').innerHTML = "Total: 545$";
-                document.getElementById('note').innerHTML = "The extra 45$ for the studio.";
-            } else if (session === 'birthday' & place === 'studio' & packages == 60) {
-                document.getElementById('totalPrice').innerHTML = "Total: 550$";
-            } else if (session === 'wOthers') {
-                document.getElementById('totalPrice').innerHTML = "";
-                document.getElementById('note').innerHTML = "Contact me for specifics.";
-            } else if (place === 'others') {
-                document.getElementById('totalPrice').innerHTML = "";
-                document.getElementById('note').innerHTML = "Contact me for specifics.";
-            } else {
-                document.getElementById('totalPrice').innerHTML = "";
-                document.getElementById('note').innerHTML = "";
-            }
-        }
-    </script>
+{% block customJS %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+            integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{% static 'client/js/book_me.js' %}"></script>
 {% endblock %}
