--- a/templates/static_pages_and_forms/success.html
+++ b/templates/static_pages_and_forms/success.html
@@ -64,7 +64,7 @@
                     <h2 style="background: rgba(190, 222, 238, 0.5);">Your contact information and message was
                         successfully submitted.</h2>
                     <div class="alert-warning" style="text-align: center; font-size: medium">
-                        Wanna book me ? Click <a href="{% url 'client:bookme' %}">here</a></div>
+                        Wanna book me ? Click <a href="{% url 'client:book_me' %}">here</a></div>
                 </div>
             </div>
         </div>
