translated homepage and some admin pages

--- a/templates/administration/add/add_photos.html
+++ b/templates/administration/add/add_photos.html
@@ -49,9 +49,9 @@
                             <!-- /.card-body -->
 
                             <div class="card-footer">
-                                <button type="submit" class="btn btn-info">{% translate "Envoyer" %}</button>
+                                <button type="submit" class="btn btn-info">{% translate "Send" %}</button>
                                 <button type="reset" class="btn btn-default float-right">
-                                    <a href="{% url 'administration:index' %}">{% translate "Annuler" %}</a>
+                                    <a href="{% url 'administration:index' %}">{% translate "Cancel" %}</a>
                                 </button>
                             </div>
 
