--- a/templates/administration/view/index.html
+++ b/templates/administration/view/index.html
@@ -60,7 +60,7 @@
                                 <i class="ion ion-ios-albums"></i>
                             </div>
                             <a href="{% url 'administration:session_list' %}" class="small-box-footer">
-                                {% translate "More info" %}
+                                {% translate "More info" %}&nbsp;
                                 <i class="fas fa-arrow-circle-right"></i>
                             </a>
                         </div>
@@ -76,7 +76,7 @@
                                 <i class="ion ion-document"></i>
                             </div>
                             <a href="{% url 'administration:message_list' %}" class="small-box-footer">
-                                {% translate "More info " %}
+                                {% translate "More info" %}&nbsp;
                                 <i class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                 <i class="ion ion-images"></i>
                             </div>
                             <a href="#" class="small-box-footer">
-                                {% translate "More info " %}
+                                {% translate "More info" %}&nbsp;
                                 <i class="fas fa-arrow-circle-right"></i>
                             </a>
                         </div>
@@ -107,7 +107,7 @@
                                 <i class="ion ion-person-stalker"></i>
                             </div>
                             <a href="{% url 'administration:user_list' %}" class="small-box-footer">
-                                {% translate "More info " %}
+                                {% translate "More info" %}&nbsp;
                                 <i class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
