--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,4 +1,5 @@
 {% extends 'homepage/base.html' %}
+{% load i18n %}
 {% load static %}
 {% block priceTableCSS %}
     <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/priceCards.css' %}"/>{% endblock %}
@@ -23,12 +24,12 @@
     <section class="pricing-table">
         <div class="container">
             <div class="block-heading">
-                <h2>Promotions</h2>
+                <h2>{% trans "Promotions" %}</h2>
                 <p class="text-black important" style="color: black; font-weight: 600">
-                    For a limited time, only in <b>Orlando</b>, I am offering a 3 photos package for only $130.
+                    {% trans "For a limited time, only in <b>Orlando</b>, I am offering a 3 photos package for only $130." %}
                 </p>
                 <a href="{% url 'client:book_me_session' 1 %}" class="btn btn-primary btn-xl js-scroll-trigger"
-                   style="background-color: #6c757d;">Book Now</a>
+                   style="background-color: #6c757d;">{% trans "Book Now" %}</a>
             </div>
         </div>
     </section>
@@ -41,30 +42,34 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-7 p-0">
                         <div class="intro-text">
-                            <h2 style="padding-left: 5px; padding-right: 5px; font-size:38px;">My name is Roos Laurore.
-                                I’m a photographer</h2>
-                            <p>Born in the 90's, I am very passionate about everything related to art, music and
-                                photography. I spent 1 year in France doing photography and sharing with others in the
-                                field. I learned how to use Photoshop, and I'm really good at it. While in France, I
-                                landed my first wedding gig on a yatch. I am actually interested in computer science and
-                                long term investing. I'm planning to travel a little in the next years in Indonesia,
-                                Greece and China. Long term goal : Digital Nomad.</p>
-                            <a href="{% url 'pf:index_portfolio' %}" class="sp-link">Take a look @my portfolio</a>
+                            <h2 style="padding-left: 5px; padding-right: 5px; font-size:38px;">{% trans "My name is Roos Laurore" %}.
+                                {% trans "I’m a photographer" %}</h2>
+                            <p>
+                                {% blocktranslate %}
+                                    Born in the 90's, I am very passionate about everything related to art, music and
+                                    photography. I spent 1 year in France doing photography and sharing with others in
+                                    the field. I learned how to use Photoshop, and I'm really good at it. While in
+                                    France, I landed my first wedding gig on a yatch. I am actually interested in
+                                    computer science and long term investing. I'm planning to travel a little in the
+                                    next years in Indonesia, Greece and China. Long term goal : Digital Nomad.
+                                {% endblocktranslate %}
+                            </p>
+                            <a href="{% url 'pf:index_portfolio' %}" class="sp-link">{% trans "Take a look @my portfolio" %}</a>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-5 p-0">
                         <div class="skill-warp">
                             <div class="single-progress-item">
                                 <div class="progress-bar-style" data-progress="95"></div>
-                                <p>Business</p>
+                                <p>{% trans "Business" %}</p>
                             </div>
                             <div class="single-progress-item">
                                 <div class="progress-bar-style" data-progress="100"></div>
-                                <p>Passion</p>
+                                <p>{% trans "Passion" %}</p>
                             </div>
                             <div class="single-progress-item">
                                 <div class="progress-bar-style" data-progress="90"></div>
-                                <p>Travels</p>
+                                <p>{% trans "Travels" %}</p>
                             </div>
                         </div>
                     </div>
