--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -144,7 +144,7 @@
                 <div class="col-md-6 order-2 order-md-1">
                     <div class="copyright">
                         Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                        {% trans 'All rights reserved' %} | Roos Orlens Laurore | {% trans 'Made with' %}
+                        {% trans 'All rights reserved' %} | Crueltouch | {% trans 'Made with' %}
                         <i class="fa fa-heart-o" aria-hidden="true">{% trans 'Love' %}</i> {% trans "by" %} <a
                             href="https://adamspierredavid.com" target="_blank">APD</a>
                     </div>
