--- a/templates/static_pages_and_forms/contact.html
+++ b/templates/static_pages_and_forms/contact.html
@@ -1,14 +1,9 @@
 {% extends 'homepage/base.html' %}
-{% block title %}Contact us{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Contact us" %}{% endblock %}
 {% block body %}
     <div class="clearfix"></div>
     <!-- Header section end  -->
-
-    <!-- Google Map
-    <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe>
-    </div>
-    Google Map end -->
     <style>
         input[type=text], input[type=email], textarea {
             width: 100%;
@@ -36,21 +31,30 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="contact-text">
-                        <h3>GET IN TOUCH</h3>
-                        <p>They say a picture is worth a thousand words.
-                            But I wonder what else do “they” say?
-                            In photography there is a reality so subtle that it becomes more real than reality.
-                            Taking an image reveals how rich reality truly is.
-                            Photography is a way of feeling, of loving.
-                            What you have caught on film is captured forever…
-                            It remembers little things, long after you have forgotten everything.
+                        <h3>{% trans "GET IN TOUCH" %}</h3>
+                        <p>
+                            {% blocktranslate %}
+                                They say a picture is worth a thousand words.
+                                But I wonder what else do “they” say?
+                                In photography there is a reality so subtle that it becomes more real than reality.
+                                Taking an image reveals how rich reality truly is.
+                                Photography is a way of feeling, of loving.
+                                What you have caught on film is captured forever…
+                                It remembers little things, long after you have forgotten everything.
+                            {% endblocktranslate %}
                         </p>
                         <ul>
                             <li>Florida, USA</li>
                             <li>
-                                <a href="https://www.instagram.com/crueltouch_/">
-                                    <img src="https://img.icons8.com/office/30/000000/instagram-new.png"/>
+                                <a href="https://www.instagram.com/crueltouch_/" style="text-decoration: none">
+                                    <img src="https://img.icons8.com/office/30/000000/instagram-new.png" height="20px"/>
                                     @crueltouch
+                                </a>
+                            </li>
+                            <li>
+                                <a href="tel:+17543007808" style="text-decoration: none">
+                                    <img src="https://img.icons8.com/ios-filled/30/000000/phone.png" height="20px"/>
+                                    +1&nbsp;754&nbsp;300&nbsp;7808
                                 </a>
                             </li>
                         </ul>
@@ -74,7 +78,7 @@
                                 {% endfor %}
                             {% endfor %}
                         {% endif %}
-                        <input class="btn btn-primary prevent_multiple" type="submit" value="Submit"
+                        <input class="btn btn-primary prevent_multiple" type="submit" value="{% trans 'Submit' %}"
                                style="width: 100px">
                     </form>
                 </div>
@@ -88,26 +92,6 @@
         <h6></h6>
         <div id="instafeed" class="instagram-slider owl-carousel"></div>
     </div>
-
-    <script>
-        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field
-*/
-
-        //Query All input fields
-        let form_fields = document.getElementsByTagName('input')
-        form_fields[1].placeholder = 'How do I call you ? ';
-        form_fields[2].placeholder = 'A valid email address, please... !';
-        form_fields[3].placeholder = "What is the subject of your message... ?";
-
-        let form_field_text_area = document.getElementsByTagName('textarea')
-        form_field_text_area[0].placeholder = "I'm listening... ";
-
-
-        for (let field in form_fields) {
-            form_fields[field].className += ' form-control'
-        }
-    </script>
 
 {% endblock %}
 
