--- a/templates/static_pages_and_forms/success.html
+++ b/templates/static_pages_and_forms/success.html
@@ -1,14 +1,9 @@
 {% extends 'homepage/base.html' %}
-{% block title %}Contact us{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Success" %}{% endblock %}
 {% block body %}
     <div class="clearfix"></div>
-    <!-- Header section end  -->
 
-    <!-- Google Map
-    <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe>
-    </div>
-    Google Map end -->
     <style>
         input[type=text], input[type=email], textarea {
             width: 100%;
@@ -36,23 +31,30 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="contact-text">
-                        <h3>GET IN TOUCH</h3>
-                        <p>They say a picture is worth a thousand words.
-                            But I wonder, what else do “they” say?
-                            In photography there is a reality so subtle that it becomes more real than reality.
-                            Taking an image, freezing a moment, reveals how rich reality truly is.
-                            Photography is a way of feeling, of touching, of loving.
-                            What you have caught on film is captured forever…
-                            It remembers little things, long after you have forgotten everything.
-                            A thing that you see in my pictures is that I was not afraid to fall in love with these
-                            people...
+                        <h3>{% trans "GET IN TOUCH" %}</h3>
+                        <p>
+                            {% blocktranslate %}
+                                They say a picture is worth a thousand words.
+                                But I wonder what else do “they” say?
+                                In photography there is a reality so subtle that it becomes more real than reality.
+                                Taking an image reveals how rich reality truly is.
+                                Photography is a way of feeling, of loving.
+                                What you have caught on film is captured forever…
+                                It remembers little things, long after you have forgotten everything.
+                            {% endblocktranslate %}
                         </p>
                         <ul>
                             <li>Florida, USA</li>
                             <li>
-                                <a href="https://www.instagram.com/crueltouch_/">
-                                    <img src="https://img.icons8.com/office/30/000000/instagram-new.png"/>
+                                <a href="https://www.instagram.com/crueltouch_/" style="text-decoration: none">
+                                    <img src="https://img.icons8.com/office/30/000000/instagram-new.png" height="20px"/>
                                     @crueltouch
+                                </a>
+                            </li>
+                            <li>
+                                <a href="tel:+17543007808" style="text-decoration: none">
+                                    <img src="https://img.icons8.com/ios-filled/30/000000/phone.png" height="20px"/>
+                                    +1&nbsp;754&nbsp;300&nbsp;7808
                                 </a>
                             </li>
                         </ul>
@@ -60,11 +62,15 @@
                 </div>
                 <div class="col-lg-8">
                     <h2 class="alert-info" id="info" style="text-align: center; margin-top: auto">
-                        Thank you for your inquiry </h2>
-                    <h2 style="background: rgba(190, 222, 238, 0.5);">Your contact information and message was
-                        successfully submitted.</h2>
+                        {% trans "Thank you for your inquiry" %} </h2>
+                    <h2 style="background: rgba(190, 222, 238, 0.5);">
+                        {% trans "Your contact information and message was successfully submitted." %}
+                    </h2>
                     <div class="alert-warning" style="text-align: center; font-size: medium">
-                        Wanna book me ? Click <a href="{% url 'client:book_me' %}">here</a></div>
+                        {% trans 'Wanna book me' %} ? {% trans 'Click' %} <a href="{% url 'client:book_me' %}">
+                        {% trans "here" %}
+                    </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,23 +82,5 @@
         <h6>Instagram Feed</h6>
         <div id="instafeed" class="instagram-slider owl-carousel"></div>
     </div>
-
-    <script>
-        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field
-*/
-
-        //Query All input fields
-        var form_fields = document.getElementsByTagName('input')
-        form_fields[1].placeholder = 'Full name...';
-        form_fields[2].placeholder = 'Email...';
-        form_fields[3].placeholder = 'Subject...';
-        form_fields[4].placeholder = 'Message...';
-
-
-        for (var field in form_fields) {
-            form_fields[field].className += ' form-control'
-        }
-    </script>
 
 {% endblock %}
